--- a/ft_services/srcs/mysql/Dockerfile
+++ b/ft_services/srcs/mysql/Dockerfile
@@ -2,6 +2,7 @@ FROM alpine:latest
 
 RUN apk add mysql
 RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
-RUN  apk add openrc
-RUN touch /run/openrc/softlevel
+RUN apk add openrc
+ADD wp.sql /
+CMD [ "touch", "/run/openrc/softlevel" ]
 EXPOSE 3306
