--- a/ft_services/srcs/mysql/Dockerfile
+++ b/ft_services/srcs/mysql/Dockerfile
@@ -4,5 +4,6 @@ RUN apk add mysql
 RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
 RUN apk add openrc
 ADD wp.sql /
-CMD [ "touch", "/run/openrc/softlevel" ]
+ADD run.sh /
+CMD [ "sh", "run.sh" ]
 EXPOSE 3306
