--- a/ft_services/srcs/mysql/mysql_pod.yml
+++ b/ft_services/srcs/mysql/mysql_pod.yml
@@ -1,17 +1,44 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+spec:
+  selector:
+    app: services
+    tier: backend
+    type: backend
+  type: ClusterIP
+  ports:
+    - port: 3306
+      targetPort: 3306
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv
+  labels:
+    app: services
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
   labels:
-    app: mysql
+    app: services
 spec:
   selector:
     matchLabels:
-      app: mysql
+      app: services
   template:
     metadata:
       labels:
-        app: mysql
+        app: services
     spec:
       restartPolicy: Always
       containers:
@@ -20,3 +47,10 @@ spec:
         imagePullPolicy: Never
         ports:
         - containerPort: 3306
+        volumeMounts:
+          - name: mysql-persistent-storage
+            mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
