--- a/ft_services/srcs/phpmyadmin/pma_pod.yml
+++ b/ft_services/srcs/phpmyadmin/pma_pod.yml
@@ -1,17 +1,44 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: pma
+spec:
+  selector:
+    app: services
+    tier: frontend
+    type: frontend
+  type: NodePort
+  ports:
+    - port: 5000
+      targetPort: 5000
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pma-pv
+  labels:
+    app: services
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: phpmyadmin
   labels:
-    app: phpmyadmin
+    app: services
 spec:
   selector:
     matchLabels:
-      app: phpmyadmin
+      app: services
   template:
     metadata:
       labels:
-        app: phpmyadmin
+        app: services
     spec:
       restartPolicy: Always
       containers:
@@ -20,3 +47,10 @@ spec:
         imagePullPolicy: Never
         ports:
         - containerPort: 5000
+        volumeMounts:
+          - name: pma-persistent-storage
+            mountPath: /phpmyadmin
+      volumes:
+      - name: pma-persistent-storage
+        persistentVolumeClaim:
+          claimName: mpa-pv
